--- a/resources/config.yml
+++ b/resources/config.yml
@@ -4,7 +4,7 @@
 # List of available colors:
 # black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, and white.
 color:
-  common: yellow
+  common: black
   uncommon: blue
-  rare: green
-  mythical: purple
+  rare: yellow
+  mythical: red
